--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 .RData
 .Ruserdata
 
+# cache
+cache/
+
 # Output
 md-paper-manuscript.docx
 md-paper-manuscript.tex
@@ -13,5 +16,15 @@ md-paper.tex
 rmd-paper-manuscript.docx
 rmd-paper-manuscript.tex
 rmd-paper.docx
+rmd-paper.aux
+rmd-paper.bbl
+rmd-paper.bcf
+rmd-paper.blg
+rmd-paper.fdb_latexmk
+rmd-paper.fls
+rmd-paper.log
+rmd-paper.out
+rmd-paper.run.xml
+rmd-paper.xdv
 
 
